--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Advanced Percentage Calculator. All rights reserved.</p>
+            <p>&copy; `${new Date().getUTCFullYear()}` Advanced Percentage Calculator. All rights reserved.</p>
         </div>
     </footer>
 
