--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://calculations.tools/">
     <meta property="og:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="og:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more with our modern, fast, and accurate calculator.">
-    <meta property="og:image" content="https://calculations.tools/calculator-preview.jpg">
+    <meta property="og:image" content="https://calculations.tools/favicon-512x512.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://calculations.tools/">
     <meta property="twitter:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="twitter:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more.">
-    <meta property="twitter:image" content="https://calculations.tools/calculator-preview.jpg">
+    <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
