--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://calculations.tools/">
     <meta property="og:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="og:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more with our modern, fast, and accurate calculator.">
-    <meta property="og:image" content="https://calculations.tools/favicon-512x512.png">
+    <meta property="og:image" content="https://calculations.tools/open-graph.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
