--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "Advanced Percentage Calculator",
-      "description": "Professional percentage calculator with multiple calculation modes",
+      "description": "Professional percentage calculator with multiple calculation modes and word counter",
       "url": "https://calculations.tools/",
       "applicationCategory": "UtilityApplication",
       "operatingSystem": "Any",
