--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1 class="main-title">Advanced Percentage Calculator</h1>
+            <h1 class="main-title">Advanced Percentage Calculator Tools</h1>
             <p class="subtitle">Professional-grade percentage calculations with multiple modes. Fast, accurate, and beautifully designed.</p>
         </div>
     </header>
