--- a/index.html
+++ b/index.html
@@ -191,6 +191,15 @@
     </footer>
 
     <!-- JavaScript -->
+    <script>
+  (function() {
+    var redirect = sessionStorage.redirect;
+    delete sessionStorage.redirect;
+    if (redirect && redirect != location.href) {
+      history.replaceState(null, null, redirect);
+    }
+  })();
+</script>
     <script src="script.js"></script>
 </body>
 </html>
