--- a/word-counter.html
+++ b/word-counter.html
@@ -1,196 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Percentage Calculator - Free Online Tool</title>
-    <meta name="description" content="Free advanced percentage calculator with multiple modes. Calculate basic percentages, percentage increases, decreases, and find what percentage one number is of another. Fast, accurate, and mobile-friendly.">
-    <meta name="keywords" content="percentage calculator, percentage increase calculator, percentage decrease calculator, math calculator, online calculator, free calculator">
-    <meta name="author" content="Advanced Percentage Calculator">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://calculations.tools/">
-    <meta property="og:title" content="Advanced Percentage Calculator - Free Online Tool">
-    <meta property="og:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more with our modern, fast, and accurate calculator.">
-    <meta property="og:image" content="https://calculations.tools/open-graph.webp">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://calculations.tools/">
-    <meta property="twitter:title" content="Advanced Percentage Calculator - Free Online Tool">
-    <meta property="twitter:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more.">
-    <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://calculations.tools/">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="styles.css">
-
-    <!-- Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "Advanced Percentage Calculator",
-      "description": "Professional percentage calculator with multiple calculation modes and word counter",
-      "url": "https://calculations.tools/",
-      "applicationCategory": "UtilityApplication",
-      "operatingSystem": "Any",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
-      }
-    }
-    </script>
-</head>
-<body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <h1 class="main-title">JP test</h1>
-            <p class="subtitle">Professional-grade percentage calculations with multiple modes. Fast, accurate, and beautifully designed.</p>
-        </div>
-    </header>
-
-    <!-- Main Content -->
-    <main class="main-content">
-        <div class="container">
-            <!-- Calculator Type Selector -->
-            <section class="calculator-types" aria-label="Calculator Types">
-                <div class="calculator-grid">
-                    <button class="calculator-card active" data-type="basic">
-                        <div class="card-icon basic-icon">%</div>
-                        <div class="card-content">
-                            <h3>Basic Percentage</h3>
-                            <p>Calculate X% of a number</p>
-                        </div>
-                    </button>
-                    <button class="calculator-card" data-type="increase">
-                        <div class="card-icon increase-icon">↗</div>
-                        <div class="card-content">
-                            <h3>Percentage Increase</h3>
-                            <p>Calculate percentage increase between two numbers</p>
-                        </div>
-                    </button>
-                    <button class="calculator-card" data-type="decrease">
-                        <div class="card-icon decrease-icon">↘</div>
-                        <div class="card-content">
-                            <h3>Percentage Decrease</h3>
-                            <p>Calculate percentage decrease between two numbers</p>
-                        </div>
-                    </button>
-                    <button class="calculator-card" data-type="whatPercent">
-                        <div class="card-icon what-percent-icon">?</div>
-                        <div class="card-content">
-                            <h3>What Percentage</h3>
-                            <p>Find what percentage X is of Y</p>
-                        </div>
-                    </button>
-                </div>
-            </section>
-
-            <!-- Calculator Interface -->
-            <section class="calculator-interface" aria-label="Calculator">
-                <div class="calculator-container">
-                    <div class="calculator-header">
-                        <h2 id="calculator-title">Basic Percentage Calculator</h2>
-                        <p id="calculator-description">Calculate what X% of a number is</p>
-                    </div>
-
-                    <form class="calculator-form" id="calculatorForm">
-                        <div id="inputsContainer" class="inputs-container">
-                            <!-- Dynamic inputs will be inserted here -->
-                        </div>
-
-                        <div id="formulaDisplay" class="formula-display hidden">
-                            <p class="formula-label">Formula:</p>
-                            <p id="formulaText" class="formula-text"></p>
-                        </div>
-
-                        <div id="resultDisplay" class="result-display hidden">
-                            <p class="result-label">Result:</p>
-                            <div class="result-value">
-                                <span id="resultValue">0</span>
-                                <button type="button" id="copyButton" class="copy-button" title="Copy to clipboard">
-                                    📋
-                                </button>
-                            </div>
-                            <p id="copyMessage" class="copy-message hidden">Copied to clipboard!</p>
-                        </div>
-
-                        <button type="button" id="resetButton" class="reset-button">
-                            🔄 Reset Calculator
-                        </button>
-                    </form>
-                </div>
-            </section>
-
-            <!-- Features Section -->
-            <section class="features" aria-label="Features">
-                <h2>Why Choose Our Calculator?</h2>
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon">🧮</div>
-                        <h3>Multiple Modes</h3>
-                        <p>Four different calculation types to cover all your percentage needs</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">⚡</div>
-                        <h3>Real-time Results</h3>
-                        <p>Instant calculations as you type with live preview</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">🎨</div>
-                        <h3>Professional Design</h3>
-                        <p>Modern, responsive interface that works on any device</p>
-                    </div>
-                </div>
-            </section>
-
-            <!-- SEO Content -->
-            <section class="seo-content">
-                <h2>How to Use the Percentage Calculator</h2>
-                <div class="content-grid">
-                    <div class="content-card">
-                        <h3>Basic Percentage Calculation</h3>
-                        <p>To calculate what percentage of a number is, simply enter the percentage and the number. For example, to find 25% of 200, enter 25 in the percentage field and 200 in the number field.</p>
-                    </div>
-                    <div class="content-card">
-                        <h3>Percentage Increase</h3>
-                        <p>Calculate the percentage increase between two values by entering the original number and the new number. The calculator will show you the percentage by which the value has increased.</p>
-                    </div>
-                    <div class="content-card">
-                        <h3>Percentage Decrease</h3>
-                        <p>Find out how much a value has decreased in percentage terms by entering the original value and the new smaller value.</p>
-                    </div>
-                    <div class="content-card">
-                        <h3>What Percentage</h3>
-                        <p>Determine what percentage one number represents of another. This is useful for finding ratios and proportions in various calculations.</p>
-                    </div>
-                </div>
-            </section>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; <script>document.write(new Date().getUTCFullYear())</script> Advanced Percentage Calculator. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
-</body>
-</html>
+<p>JP test</p>
