--- a/word-counter.html
+++ b/word-counter.html
@@ -218,7 +218,7 @@
     
     <div class="relative z-10 container mx-auto px-4 py-8">
         <!-- Header -->
-        <script src="header.js"></script>
+        <script src="/src/components/ui/header.js"></script>
         <div class="text-center mb-12">
             <div class="flex items-center justify-center mb-6">
                 <div class="p-4 bg-gradient-to-r from-blue-500 to-purple-600 rounded-2xl shadow-lg">
