--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 </head>
 <body>
     <!-- Header -->
+    <script src="/src/components/header.js"></script>
     <header class="header">
         <div class="container">
             <h1 class="main-title">Advanced Percentage Calculator</h1>
