--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Free advanced percentage calculator with multiple modes. Calculate basic percentages, percentage increases, decreases, and find what percentage one number is of another. Fast, accurate, and mobile-friendly.">
     <meta name="keywords" content="percentage calculator, percentage increase calculator, percentage decrease calculator, math calculator, online calculator, free calculator">
     <meta name="author" content="Advanced Percentage Calculator">
+    <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
