--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -69,7 +69,7 @@
         <!-- Header -->
         <script src="/src/components/header.js"></script>
         <div class="text-center mb-12">
-            <h1 class="text-5xl font-bold bg-gradient-to-r from-white to-gray-300 bg-clip-text text-transparent mb-4">
+            <h1 class="text-5xl font-bold bg-gradient-to-r from-white to-gray-300 bg-clip-text text-transparent mb-4" style="line-height: 1.25">
                 Length Unit Converter
             </h1>
             <p class="text-xl text-gray-300 max-w-2xl mx-auto">
