--- a/index.html
+++ b/index.html
@@ -184,15 +184,7 @@
             </section>
         </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; <script>document.write(new Date().getUTCFullYear())</script> Advanced Percentage Calculator. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <!-- JavaScript -->
-    <script src="script.js"></script>
+<div id="footer-container"></div>
+<script src="script.js"></script>
 </body>
 </html>
