--- a/word-counter.html
+++ b/word-counter.html
@@ -384,7 +384,7 @@
             </div>
         </div>
     </div>
-
+<div id="footer-container"></div>
     <script>
         // Toast notification system
         function showToast(title, description, type = 'success') {
