--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -190,7 +190,7 @@
             </div>
         </div>
     </div>
-
+<div id="footer-container"></div>
     <script>
         // Conversion factors to meters
         const conversionFactors = {
