--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -191,6 +191,7 @@
         </div>
     </div>
 <div id="footer-container"></div>
+<script src="script.js"></script>
     <script>
         // Conversion factors to meters
         const conversionFactors = {
