--- a/word-counter.html
+++ b/word-counter.html
@@ -385,6 +385,7 @@
         </div>
     </div>
 <div id="footer-container"></div>
+<script src="script.js"></script>
     <script>
         // Toast notification system
         function showToast(title, description, type = 'success') {
