--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -191,6 +191,7 @@
         </div>
     </div>
 <script src="script.js"></script>
+<link rel="stylesheet" href="styles.css">
 <div id="footer-container"></div>
     <script>
         // Conversion factors to meters
