--- a/word-counter.html
+++ b/word-counter.html
@@ -386,6 +386,7 @@
     </div>
 <div id="footer-container"></div>
 <script src="script.js"></script>
+<link rel="stylesheet" href="styles.css">
     <script>
         // Toast notification system
         function showToast(title, description, type = 'success') {
