--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -190,7 +190,7 @@
             </div>
         </div>
     </div>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 <link rel="stylesheet" href="styles.css">
 <div id="footer-container"></div>
     <script>
