--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Length Unit Converter</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://calculations.tools/base.css"></script>
     <style>
         /* Custom animations */
         @keyframes fade-in {
