--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -329,7 +329,244 @@
 <p>Yes, a length conversion table lists pre-calculated values for quick reference.</p>
         </div>
     </div>
-<div id="footer-container"></div>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+  	{
+      "@type": "Question",
+      "name": "How Many Centimeters in an Inch?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "1 inch equals 2.54 centimeters exactly."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Why Use a Length Conversion Calculator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "While you can do these calculations manually, a length converter calculator saves time and reduces mistakes. Simply enter your number, select the units, and get the converted value instantly."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the easiest way to convert length units?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The easiest way is to use an online length converter calculator. You enter the number, choose the units, and get the converted value instantly."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert cm to inches without a calculator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "inches = centimeters ÷ 2.54. Example: 25 cm ÷ 2.54 = 9.84 inches."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert inches to cm?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "centimeters = inches × 2.54. Example: 8 inches × 2.54 = 20.32 cm."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the formula to convert feet to meters?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "meters = feet ÷ 3.28084. Example: 12 ft ÷ 3.28084 = 3.6576 m."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How many feet are in a meter?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "1 meter equals 3.28084 feet."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How many centimeters are in an inch?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "1 inch equals 2.54 centimeters exactly."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert cm to feet?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "feet = centimeters ÷ 30.48. Example: 170 cm ÷ 30.48 = 5.577 feet."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How many meters are in a mile?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "1 mile equals 1609.34 meters."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert miles to kilometers?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "kilometers = miles × 1.60934. Example: 3 miles × 1.60934 = 4.82802 km."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert kilometers to miles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "miles = kilometers ÷ 1.60934. Example: 10 km ÷ 1.60934 = 6.21371 miles."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert meters to yards?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "yards = meters ÷ 0.9144. Example: 50 m ÷ 0.9144 = 54.6807 yards."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert yards to meters?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "meters = yards × 0.9144. Example: 30 yards × 0.9144 = 27.432 meters."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is a metric converter for length?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "A metric conversion length calculator changes one metric unit to another, like meters to centimeters."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the difference between metric and imperial units for length?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The metric system uses meters, centimeters, and kilometers. The imperial system uses inches, feet, yards, and miles."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I use a length converter for both small and large distances?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, a unit converter for length works for anything from millimeters to miles."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How accurate is an online length conversion calculator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "If it uses correct conversion factors, it will be accurate to several decimal places."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert meters to inches?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "inches = meters × 39.3701. Example: 2 m × 39.3701 = 78.7402 inches."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert feet to miles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "miles = feet ÷ 5280. Example: 10,560 ft ÷ 5280 = 2 miles."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is a length measurement conversion?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "It’s the process of converting one length unit into another."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can a length translate tool be used for travel distances?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, many people use a length conversion calculator to convert kilometers to miles for travel planning."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Why do some countries use miles and others use kilometers?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Countries like the United States use miles, while most countries use kilometers."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is there a quick way to remember key length conversions?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes: 1 inch = 2.54 cm, 1 foot = 30.48 cm, 1 yard = 0.9144 m, 1 mile = 1.60934 km."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the difference between “cm to inches” and “centimeters to inches”?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "They mean the same thing; “cm to inches” is shorter to say."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I use the same conversion for “cm to in” and “centimeter to in”?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, both mean centimeters to inches, divide by 2.54."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert m to ft without rounding too much?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Multiply meters by 3.28084 and keep 4 decimal places for accuracy."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I use a conversion length table instead of a calculator?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, a length conversion table lists pre-calculated values for quick reference."
+      }
+    }
+  ]
+}
+</script>
+<footer class="footer">
+  <div class="container">
+    <p>&copy; <script>document.write(new Date().getUTCFullYear())</script> calculations.tools. All rights reserved.</p>
+    <i>Built to help by <a href="https://www.linkedin.com/in/jesperpallesen20/" target="_blank">Jesper Pallesen</a></i>
+  </div>
+</footer>
     <script>
         // Conversion factors to meters
         const conversionFactors = {
