--- a/word-counter.html
+++ b/word-counter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Word Counter - Professional Text Analysis Tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/base.css">
     <script>
         tailwind.config = {
             theme: {
