--- a/index.html
+++ b/index.html
@@ -9,35 +9,23 @@
     <meta name="keywords" content="percentage calculator, percentage increase calculator, percentage decrease calculator, math calculator, online calculator, free calculator">
     <meta name="author" content="Advanced Percentage Calculator">
     <script src="https://cdn.tailwindcss.com"></script>
-    
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://calculations.tools/">
     <meta property="og:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="og:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more with our modern, fast, and accurate calculator.">
     <meta property="og:image" content="https://calculations.tools/open-graph.webp">
-
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://calculations.tools/">
     <meta property="twitter:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="twitter:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more.">
     <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
-
-    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
-    <!-- Canonical URL -->
     <link rel="canonical" href="https://calculations.tools/">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="styles.css">
-
-    <!-- Structured Data -->
+    <link rel="stylesheet" href="/base.css">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -56,7 +44,6 @@
     </script>
 </head>
 <body>
-    <!-- Header -->
     <script src="/src/components/header.js"></script>
     <header class="header">
         <div class="container">
@@ -64,11 +51,8 @@
             <p class="subtitle">Professional-grade percentage calculations with multiple modes. Fast, accurate, and beautifully designed.</p>
         </div>
     </header>
-
-    <!-- Main Content -->
     <main class="main-content">
         <div class="container">
-            <!-- Calculator Type Selector -->
             <section class="calculator-types" aria-label="Calculator Types">
                 <div class="calculator-grid">
                     <button class="calculator-card active" data-type="basic">
@@ -101,8 +85,6 @@
                     </button>
                 </div>
             </section>
-
-            <!-- Calculator Interface -->
             <section class="calculator-interface" aria-label="Calculator">
                 <div class="calculator-container">
                     <div class="calculator-header">
@@ -137,8 +119,6 @@
                     </form>
                 </div>
             </section>
-
-            <!-- Features Section -->
             <section class="features" aria-label="Features">
                 <h2>Why Choose Our Calculator?</h2>
                 <div class="features-grid">
@@ -159,8 +139,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- SEO Content -->
             <section class="seo-content">
                 <h2>How to Use the Percentage Calculator</h2>
                 <div class="content-grid">
