--- a/word-counter.html
+++ b/word-counter.html
@@ -385,7 +385,12 @@
             </div>
         </div>
     </div>
-<div id="footer-container"></div>
+<footer class="footer">
+  <div class="container">
+    <p>&copy; <script>document.write(new Date().getUTCFullYear())</script> calculations.tools. All rights reserved.</p>
+    <i>Built to help by <a href="https://www.linkedin.com/in/jesperpallesen20/" target="_blank">Jesper Pallesen</a></i>
+  </div>
+</footer>
     <script>
         // Toast notification system
         function showToast(title, description, type = 'success') {
