--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -64,11 +64,10 @@
             padding-right: 2.5rem;
         }
     </style>
+    <script src="/header.js"></script>
 </head>
 <body class="min-h-screen bg-gradient-to-br from-slate-900 via-purple-700 to-slate-900">
     <div class="container mx-auto px-4 py-8">
-        <!-- Header -->
-        <script src="/src/components/header.js"></script>
         <div class="text-center mb-12">
             <h1 class="text-5xl font-bold bg-gradient-to-r from-white to-gray-300 bg-clip-text text-transparent mb-4" style="line-height: 1.25">
                 Length Unit Converter
