--- a/word-counter.html
+++ b/word-counter.html
@@ -210,6 +210,7 @@
             animation: slideOut 0.3s ease-out forwards;
         }
     </style>
+    <script src="/header.js"></script>
 </head>
 <body class="min-h-screen min-w-full bg-gradient-to-br from-slate-900 via-purple-900 to-slate-900">
     <!-- Background Effects -->
@@ -218,8 +219,6 @@
     </div>
     
     <div class="relative z-10 container mx-auto px-4 py-8">
-        <!-- Header -->
-        <script src="/src/components/header.js"></script>
         <div class="text-center mb-12">
             <div class="flex items-center justify-center mb-6">
                 <div class="p-4 bg-gradient-to-r from-blue-500 to-purple-600 rounded-2xl shadow-lg">
