--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,9 +41,9 @@
       }
     }
     </script>
+    <script src="/header.js"></script>
 </head>
 <body>
-    <script src="/src/components/header.js"></script>
     <header class="header">
         <div class="container">
             <h1 class="main-title">Advanced Percentage Calculator</h1>
