--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
     <script src="/header.js"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <h1 class="main-title">Advanced Percentage Calculator</h1>
-            <p class="subtitle">Professional-grade percentage calculations with multiple modes. Fast, accurate, and beautifully designed.</p>
-        </div>
-    </header>
+    <div class="text-center mb-12">
+        <h1 class="main-title">Advanced Percentage Calculator</h1>
+        <p class="subtitle">Professional-grade percentage calculations with multiple modes. Fast, accurate, and beautifully designed.</p>
+    </div>
     <main class="main-content">
         <div class="container">
             <section class="calculator-types" aria-label="Calculator Types">
